Fix header shadow because it was not visible

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/* for working pruposes */
-div {
-    /* border: 1px solid gray; */
-}
-
 body {
     display: grid;
     grid-template: auto 1fr / auto 1fr;
@@ -79,11 +74,13 @@ p {
 }
 
 .header {
+    position: relative;
+    z-index: 10;
     display: grid;
     grid-template: auto auto / 2fr 1fr;
     padding: 20px 40px 10px 40px;
     gap: 16px;
-    box-shadow: 5px 5px 10px #d4d4d4;
+    box-shadow: 5px 5px 5px #d4d4d4;
 }
 
 .search {
